--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Camille COCHENER
 logo: /assets/img/logo.png
-description: Minimal is a theme for GitHub Pages.
+description: Description.
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-minimal
