--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Camille COCHENER
 logo: /assets/img/logo.png
-description: Description.
+description: Data Scientist with 4 years of experience - Agrocampus Ouest & Télécom Paris Alumni
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-minimal
