--- a/_config.yml
+++ b/_config.yml
@@ -5,3 +5,14 @@ school: Agrocampus Ouest & Télécom Paris Alumni
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-minimal
+location : "Paris"
+links:
+  - label: "Linkedin"
+    icon: "fab fa-fw fa-linkedin"
+    url: "https://www.linkedin.com/in/camillecochener/"
+  - label: "Mail"
+    icon: "fas fa-fw fa-envelope-square"
+    url: "mailto:cochenercamille@yahoo.fr"
+  - label: "GitHub"
+    icon: "fab fa-fw fa-github"
+    url: "https://github.com/camillecochener"
