--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Camille COCHENER
 logo: /assets/img/logo.png
 description: Data Scientist (+4 years)
 school: Agrocampus Ouest & Télécom Paris Alumni
-show_downloads: true
+show_downloads: false
 google_analytics:
 theme: jekyll-theme-minimal
 location : "Paris"
