--- a/_config.yml
+++ b/_config.yml
@@ -11,8 +11,8 @@ links:
     icon: "fab fa-linkedin"
     url: "https://www.linkedin.com/in/camillecochener/"
   - label: "Mail"
-    icon: "fas fa-fw fa-envelope-square"
+    icon: "fas fa-envelope"
     url: "mailto:cochenercamille@yahoo.fr"
   - label: "GitHub"
-    icon: "fab fa-fw fa-github"
+    icon: "fab fa-github"
     url: "https://github.com/camillecochener"
