--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Camille COCHENER
 logo: /assets/img/logo.png
-description: Data Scientist (+4 years)
+description: Data Scientist
 school: Agrocampus Ouest & Télécom Paris Alumni
 show_downloads: false
 google_analytics:
