--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Camille COCHENER
-logo: /assets/img/logo.png
+logo: /assets/img/logo2.png
 description: Data Scientist
 school: Agrocampus Ouest & Télécom Paris Alumni
 show_downloads: false
