--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,8 @@
 title: Camille COCHENER
 logo: /assets/img/logo2.png
 description: Data Scientist
-school: Agrocampus Ouest & Télécom Paris Alumni
+school: Télécom Paris
+school2: Agrocampus Ouest
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-minimal
