--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Camille COCHENER
-logo: /assets/img/logo3.png
+logo: /assets/img/logo3.jpg
 description: Data Scientist
 school: Télécom Paris
 school2: Agrocampus Ouest
